--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,29 +2,8 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-   <style type="text/css" media="screen">
-     .hl {
-         background-color: pink;
-     }
-     .panel {
-         margin: 10px;
-         padding: 10px;
-         border: 1px solid grey;
-     }
-     .controls {grid-area: controls}
-     .code     {grid-area: code; max-width: 500px; overflow: scroll;}
-     .result   {grid-area: result; min-height: 500px; max-width: 500px; overflow: scroll;}
-     .debug    {grid-area: debug}
-     .screen {
-         display: grid;
-         grid-auto-columns: 1fr;
-         grid-auto-flow: column;
-         grid-template:
-                 'controls controls'
-                 'code result'
-                 'debug debug';
-     }
-   </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <div id="app"></div>
