Giving the ui some love

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,27 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
+    <style>
+      /* width */
+      ::-webkit-scrollbar {
+          width: 10px;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+          background: #484848;
+      }
+
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+          background: #797979;
+      }
+
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+          background: #555;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
