More style fixes

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,6 +24,9 @@
       ::-webkit-scrollbar-thumb:hover {
           background: #555;
       }
+      ::-webkit-scrollbar-corner {
+          background: #484848;
+      }
     </style>
   </head>
   <body>
